removed submit on actor select, fixed z-index of dropdown

--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -8,6 +8,9 @@ footer {
   letter-spacing: 1px;
   margin: 0;
   padding: 0.6rem 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 
   width: 100%;
 
