--- a/src/styles/partials/_searchBar.scss
+++ b/src/styles/partials/_searchBar.scss
@@ -1,9 +1,3 @@
-@for $i from 2 through 1{
-  .searchBoxContainer {
-    z-index: $i;
-  }
-}
-
 .searchBar {
   font-size: 1.3rem;
   text-align: center;
@@ -13,6 +7,12 @@
   .searchBoxContainer {
     display: inline-block;
     position: relative;
+
+    &:first-of-type{
+      .autocomplete {
+        z-index: 1;
+      }
+    }
   }
 
   .autocomplete {
@@ -28,6 +28,8 @@
     left: 10px;
     right: 5px;
     padding: 0;
+
+    
     
 
     li {
@@ -54,6 +56,9 @@
         &:hover,
         &:focus {
           transform: none;
+        }
+        
+        &:focus {
           background-color: #ddd;
           outline: none;
         }
